--- a/index.html
+++ b/index.html
@@ -1,21 +1,9 @@
-<!doctype html>
-<html lang="ja">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>HTML Sample</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="sample.js"></script>
+<meta charset="utf-8">
+<title>タイトル</title>
 </head>
 <body>
-  <div class="header">Header領域</div>
-  <div class="main">
-    <h1>見出し</h1>
-    <p>コンテンツ</p>
-    <img src="img/sample1.jpg">
-  </div>
-  <div class="footer">
-    <span>Footer領域</span>
-    <a href="#">リンク</a>
-  </div>
+本文
 </body>
 </html>
